Fix all TypeScript and configuration errors
- Install @types/node for root tsconfig
- Add moduleResolution: bundler to frontend tsconfig
- Create tsconfig.node.json for Vite configuration
- Add vite-env.d.ts with Window.ethereum type definitions
- Fix vite.config.ts path parameter type annotation
- Remove unused imports from useContractInteraction.ts
- Fix attendanceService.ts contract type safety
- Remove .tsx extension from import in main.tsx
- Add CSS linter settings to suppress Tailwind warnings
- All 240+ errors now resolved

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/mocha": "^10.0.10",
+    "@types/node": "^24.10.1",
     "chai": "^6.2.1",
     "ethers": "^6.15.0",
     "hardhat": "^2.27.0",
